Hover on mobile fixed

--- a/scss/wg-style.scss
+++ b/scss/wg-style.scss
@@ -280,8 +280,10 @@
         }
       }
 
-      &:hover {
-        box-shadow: rgba(255, 255, 255, 0.5) -2px -3px 15px 1px;
+      @media (hover: hover) {
+        &:hover {
+          box-shadow: rgba(255, 255, 255, 0.5) -2px -3px 15px 1px;
+        }
       }
       &:active {
         transform: translateY(2px);
